# civ4_ri_rebuild

./: .gitignore  README.md
Assets/Config/: AI AutoPlay.xml  Advanced Combat Odds.xml  Advanced Scoreboard.xml  Autolog.xml  BUG Advisors.xml  BUG Main Interface.xml  BULL Actions.xml  BULL City Bar.xml  BULL Misc Hovers.xml  Change Player.xml  Enhanced Cultural Decay.xml  EventSigns.xml  Great Person Naming.xml  Holy City Migration.xml  Nationhood Civic Promotions.xml  Not Just Another Game Clock.xml  Religion Conquest.xml  Slavery Rebellion.xml  Tech Conquest.xml  Trait Buildings.xml  Trigger Event.xml  Unit Naming.xml  init.release.xml  init.xml
Assets/Python/: Consts.py  CvAdvisorUtils.py  CvCameraControls.py  CvCustomEventManager.py  CvDebugTools.py  CvDiplomacy.py  CvEventManager.py  CvGameUtils.py  CvMapGeneratorUtil.py  CvUtil.py  DomPyHelpers.py  MapScriptTools.py  PyHelpers.py  ScreenInput.py  StoredData.py
Assets/Python/Components/: BarbCiv.py  DynamicCityNaming.py  DynamicCivNaming.py  EnhancedCulturalDecay.py  IDW.py  Revolutions.py
Assets/Python/Development/: TriggerEvent.py
Assets/Python/EntryPoints/: CvAppInterface.py  CvOptionsScreenCallbackInterface.py  CvScreensInterface.py
Assets/Python/Screens/: CvBUGMilitaryAdvisor.py  CvCustomizableDomesticAdvisor.py  CvEraMovieScreen.py  CvExoticForeignAdvisor.py  CvForeignAdvisor.py  CvMainInterface.py  CvPediaBonus.py  CvPediaBuilding.py  CvPediaConcept.py  CvPediaEra.py  CvPediaFeature.py  CvPediaHandicap.py  CvPediaProject.py  CvPediaPromotion.py  CvPediaScreen.py  CvPediaSectionMilitary.py  CvPediaSectionSociety.py  CvPediaSectionUnits.py  CvPediaSectionWorld.py  CvPediaTech.py  CvPediaTechGraph.py  CvPediaTrait.py  CvPediaViewBuildingUpgradeChart.py  CvPediaViewBuildings.py  CvPediaViewCivilizations.py  CvPediaViewLeaders.py  CvPediaViewTechnologiesEra.py  CvPediaViewUnitUpgradeChart.py  CvPopulationAdvisor.py  CvReligionScreen.py  CvReplayScreen.py  CvScreenEnums.py  CvTechChooser.py  CvVictoryScreen.py  CvWorldBuilderScreen.py  EconomicsAdvisor.py  PyDirectedAcyclicGraph.py  PyPromotionGraph.py  PyTechGraph.py
Assets/Python/pyWB/: CvWBDesc.py
Assets/XML/: BBAI_AI_Variables_GlobalDefines.xml  BBAI_Game_Options_GlobalDefines.xml  GlobalDefinesAlt.xml  GlobalTypes.xml  LeadFromBehind_GlobalDefines.xml  TechDiffusion_GlobalDefines.xml
Assets/XML/Art/: CIV4ArtDefinesSchema.xml  CIV4ArtDefines_Bonus.xml  CIV4ArtDefines_Building.xml  CIV4ArtDefines_Civilization.xml  CIV4ArtDefines_Feature.xml  CIV4ArtDefines_Improvement.xml  CIV4ArtDefines_Interface.xml  CIV4ArtDefines_Leaderhead.xml  CIV4ArtDefines_Misc.xml  CIV4ArtDefines_Movie.xml  CIV4ArtDefines_Terrain.xml  CIV4RouteModelInfos.xml
Assets/XML/Audio/: Audio2DScripts-LightVersion.xml  Audio2DScripts.xml  Audio3DScripts.xml  AudioDefines-LightVersion.xml  AudioDefines.xml
Assets/XML/BasicInfos/: CIV4AidStyleInfos.xml  CIV4BasicInfoSchema.xml  CIV4ContributionInfos.xml  CIV4DenialInfos.xml  CIV4DetrimentStyleInfos.xml  CIV4GameEventInfos.xml  CIV4InvisibleInfos.xml  CIV4MemoryInfos.xml  CIV4NewConceptInfos.xml  CIV4UnitAIInfos.xml  CIV4UnitCombatInfos.xml
Assets/XML/Buildings/: Art_Eras_CIV4BuildingInfos.xml  CIV4BuildingClassInfos.xml  CIV4BuildingInfos.xml  CIV4BuildingsSchema.xml  CIV4CityLSystem.xml  CIV4PlotLSystem.xml  CIV4SpecialBuildingInfos.xml  National_Wonders_CIV4BuildingInfos.xml  Science_Eras_CIV4BuildingInfos.xml  Separatism_CIV4BuildingInfos.xml  World_Wonders_CIV4BuildingInfos.xml
Assets/XML/Civilizations/: CIV4CivilizationInfos.xml  CIV4CivilizationsSchema.xml  CIV4TraitInfos.xml  CIV4UnitArtStyleTypeInfos.xml  Derivative_CIV4CivilizationInfos.xml  OtherCivs_CIV4CivilizationInfos.xml
Assets/XML/Events/: CIV4EventInfos.xml  CIV4EventTriggerInfos.xml
Assets/XML/GameInfo/: CIV4CivicInfos.xml  CIV4CommerceInfo.xml  CIV4CorporationInfo.xml  CIV4CultureLevelInfo.xml  CIV4DiplomacyInfos.xml  CIV4DomainInfos.xml  CIV4EmphasizeInfo.xml  CIV4EraInfos-LightVersion.xml  CIV4EraInfos.xml  CIV4EspionageMissionInfo.xml  CIV4GameInfoSchema.xml  CIV4GameOptionInfos.xml  CIV4GameSpeedInfo.xml  CIV4GoodyInfo.xml  CIV4GraphicOptionInfos.xml  CIV4HandicapInfo.xml  CIV4Hints.xml  CIV4HotKeyClassInfos.xml  CIV4HurryInfo.xml  CIV4PlayerOptionInfos.xml  CIV4ProcessInfo.xml  CIV4ProjectInfo.xml  CIV4ReligionInfo.xml  CIV4SocialStabilityInfos.xml  CIV4SpecialistInfos.xml  CIV4VictoryInfo.xml  CIV4VoteInfo.xml  CIV4VoteSourceInfos.xml  CIV4WorldInfo.xml
Assets/XML/Interface/: CIV4ColorVals.xml  CIV4InterfaceModeInfos.xml  CIV4InterfaceSchema.xml  CIV4PlayerColorInfos.xml  CIV4WorldPickerInfos.xml
Assets/XML/Metrics/: CIV4MetricClassInfos.xml  CIV4MetricFactorInfos.xml  CIV4MetricInfos.xml  CIV4MetricSchema.xml
Assets/XML/Misc/: CIV4DetailManager.xml  CIV4EffectInfos.xml  CIV4EffectInfos_noblood.xml  CIV4MiscSchema.xml  CIV4RouteInfos.xml
Assets/XML/Technologies/: CIV4TechInfos.xml  CIV4TechnologiesSchema.xml
Assets/XML/Terrain/: CIV4BonusClassInfos.xml  CIV4BonusInfos.xml  CIV4FeatureInfos.xml  CIV4ImprovementClassInfos.xml  CIV4ImprovementInfos.xml  CIV4TerrainInfos.xml  (+3 more)
CoreEngine/: CvPythonExtensions.py
CoreEngine/CvPythonEngine/: __init__.py  engine.py  utils.py
Documentation/: Forums.url  License.txt
Documentation/work_doc/: .first_doc.md.swp  depends.md  doc_python.md  first_doc.md
GameCore/CvGameCoreDLL/: BetterBTSAI.cpp  BetterBTSAI.h  CMakeLists.txt  CvArea.cpp  CvArea.h  CvArtFileMgr.cpp  CvArtFileMgr.h  CvBugOptions.h  CvCity.h  CvCityAI.cpp  CvDLLButtonPopup.cpp  CvDLLButtonPopup.h  CvDLLEngineIFaceBase.h  CvDLLIniParserIFaceBase.h  CvDLLPython.cpp  CvDLLPythonIFaceBase.h  CvDLLUtilityIFaceBase.h  CvDLLWidgetData.cpp  CvDLLWidgetData.h  CvDLLXMLIFaceBase.h  CvDeal.h  CvDepends.h  CvDllTranslator.h  CvEventReporter.cpp  CvFractal.cpp  CvFractal.h  CvGame.cpp  CvGame.h  CvGameCoreDLL.h  CvGameCoreUtils.cpp  CvGameCoreUtils.h  CvGameTextMgr.cpp  CvGameTextMgr.h  CvGlobals.cpp  CvGlobals.h  CvInfoWater.h  CvInfos.cpp  CvInitCore.cpp  CvInitCore.h  CvMap.h  (+68 more)
Resource/: Realism.thm
examples/boost_python_impex/: CMakeLists.txt
(+586 files in other folders)
